--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "defaultBranch": "alpha",
+  "defaultBranch": "main",
   "branches": [
     "+([0-9])?(.{+([0-9]),x}).x",
     "main",
@@ -7,10 +7,6 @@
     "next-major",
     {
       "name": "beta",
-      "prerelease": true
-    },
-    {
-      "name": "alpha",
       "prerelease": true
     }
   ],
